// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/Spacer/Horizontal Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="spacer horizontal is-playground"
    style={
      Object {
        "height": 100,
        "maxHeight": 100,
        "width": 0,
      }
    }
  />
</div>
`;

exports[`Storyshots Layout/Spacer/Horizontal Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="spacer horizontal is-playground"
    style={
      Object {
        "height": 100,
        "maxHeight": 100,
        "width": 0,
      }
    }
  />
  <div
    className="spacer horizontal is-playground"
    style={
      Object {
        "height": 100,
        "maxHeight": 100,
        "width": 5,
      }
    }
  />
  <div
    className="spacer horizontal is-playground"
    style={
      Object {
        "height": 100,
        "maxHeight": 100,
        "width": 15,
      }
    }
  />
  <div
    className="spacer horizontal is-playground"
    style={
      Object {
        "height": 100,
        "maxHeight": 100,
        "width": 20,
      }
    }
  />
  <div
    className="spacer horizontal is-playground"
    style={
      Object {
        "height": 100,
        "maxHeight": 100,
        "width": 40,
      }
    }
  />
</div>
`;
